<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_blurb">BMToolbox Reporter is a free app that creates Boilermaker Apprentice Reports
        that can be submitted as PDF files.  It uses the awesome PDFBox-Android library for PDF functionality.
        This app isn\'t officially connected to any associations.  PDFs will only be saved and loaded in
        the Downloads/BMReporter folder to protect the file system.  BMToolbox Reporter is a companion
        to Boilermaker Toolbox and was separated to keep Toolbox lightweight and permission free.
        @LINEBREAKFeel free to mail bmtoolbox@gmail.com with any comments or suggestions.</string>

    <string name="version_info">BMToolbox Reporter v1.01
		\nLast updated February 19, 2015</string>
    <string name="app_name">BMToolbox Reporter</string>
    <string name="action_about">About...</string>
    <string name="action_settings">Settings</string>
    <string name="super_header_label">Apprentice Report (Supervisor)</string>
    <string name="apprentice_name_label">Apprentice Name:</string>
    <string name="report_type_label">Report Type:</string>
    <string name="reg_number_label">Registration Number:</string>
    <string name="local_number_label">Your Local Number:</string>
    <string name="employer_name_label">Employer Name:</string>
    <string name="current_date_label">Current Date:</string>
    <string name="job_start_label">Employment Start:</string>
    <string name="job_completion_label">Employment End:</string>
    <string name="job_location_label">Job Location:</string>
    <string name="job_steward_label">Job Steward:</string>
    <string name="super_name_label">Supervisor Name:</string>
    <string name="job_type_label">Job Type:</string>
    <string name="duty_header_label">Duties:</string>
    <string name="tow_header_label">Type of Work:</string>
    <string name="tow_header_hours">Typd of Work (hrs):</string>
    <string name="safety_spinner_label">Attitude to Safety</string>
    <string name="worker_spinner_label">Attitude to Co-Workers</string>
    <string name="job_spinner_label">Attitude to Job</string>
    <string name="init_spinner_label">Initiative</string>
    <string name="cap_spinner_label">Capability</string>
    <string name="rating_spinner_label">Overall Rating</string>
    <string name="absent_spinner_label">Absent</string>
    <string name="absent_edit_label">Number of Times:</string>
    <string name="late_spinner_label">Late</string>
    <string name="late_edit_label">Number of Times:</string>
    <string name="comment_edit_label">Comments:</string>
    <string name="emp_number_label">Employee Number:</string>
    <string name="local_appr_number_label">Apprentice\'s Local:</string>

    <string name="button_submit">Submit</string>

    <string name="apprentice_header_label">Apprentice Report (Apprentice)</string>
    <string name="appr_phone_label">Phone Number:</string>
    <string name="appr_appraise_label">Appraisal of the Job</string>
    <string name="appr_relationship_label">Relationship with Crew</string>
    <string name="appr_super_rate_label">Mentouring from Supervisor</string>
    <string name="appr_journey_label">Mentouring from Journeymen</string>
    <string name="appr_late_label">Were you ever late?</string>
    <string name="appr_absent_label">Were you ever absent?</string>
    <string name="appr_hours_label">Total Hours Worked:</string>
    <string name="button_clear">Clear</string>

    <string name="report_header_steward">Apprentice Report (Job Steward):</string>

    <string name="email_subject">Apprentice Report regarding $WHO</string>
    <string name="email_body">
        To whom it may concern,\n\nI have attached an Apprentice Report regarding $WHO.  This
        report was completed by the $JOB.\n\nRegards.\n\nThis report was generated by the
        BMToolbox Reporter app.
    </string>

    <string-array name="email_recipients">
        <item>, Add Later</item>
        <item>jholroyd@boilermakers.ca, Apprenticeships  - 146 Edmonton</item>
        <item>memberservices@boilermakers359.org, Member Services - 359 BC</item>
        <item>apprentice@ibblocal128.org, Apprenticeship - 128 Ontario</item>
        <item>local555@mts.net, Winnipeg Office - 555 Praries</item>
        <item>bm73@nbnet.nb.ca, New Brunswick - 73 Atlantic</item>
    </string-array>

    <string-array name="eval_spinner_ratings">
        <item>Excellent</item>
        <item>Above Average</item>
        <item>Average</item>
        <item>Below Average</item>
        <item>Unsatisfactory</item>
    </string-array>
    <string-array name="ability_ratings">
        <item>As good as a Journeyman</item>
        <item>Needs more experience</item>
        <item>Below average</item>
    </string-array>

    <string-array name="attendance_spinner_ratings">
        <item>Never</item>
        <item>Often</item>
        <item>Rarely</item>
    </string-array>

    <string-array name="appr_attendance_spinner">
        <item>Yes</item>
        <item>No</item>
        <item>Often</item>
        <item>Rarely</item>
        <item>Never</item>
    </string-array>

    <string-array name="job_types_items">
        <item>Construction</item>
        <item>Maintenance</item>
        <item>Demolition</item>
        <item>Shop</item>
    </string-array>

    <string-array name="appr_rating_items">
        <item>5 - Excellent</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1 - Poor</item>
    </string-array>>

</resources>
