<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/report_type_label"
            android:id="@+id/reportTypeSpinLabel"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/reportTypeSpinner"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />
        <View
            android:id="@+id/pb1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/reportTypeSpinLabel"
            android:background="@android:color/darker_gray"
            />
        <!--===============Apprentice Name=================-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apprentice_name_label"
            android:id="@+id/appNameLabel"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pb1" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/appNameEdit"
            android:layout_below="@id/pb1"
            android:layout_alignParentRight="true"/>
        <!--=================Sin Number===================-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sin_number_label"
            android:id="@+id/sinNumberLabel"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/appNameEdit" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/sinNumberEdit"
            android:layout_below="@id/appNameEdit"
            android:layout_alignParentRight="true"/>
        <!--==================Employer Name======================-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/employer_name_label"
            android:id="@+id/empNameLabel"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/sinNumberEdit" />
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/empNameEdit"
            android:layout_below="@id/sinNumberEdit"
            android:layout_alignParentRight="true"/>
        <!--=================Job Location=====================-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/job_location_label"
            android:id="@+id/jobLocationLabel"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/empNameEdit" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/jobLocationEdit"
            android:layout_below="@id/empNameEdit"
            android:layout_alignParentRight="true"/>
        <!--=====================Date==========================-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/current_date_label"
            android:id="@+id/currentDateLabel"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/jobLocationEdit" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/currentDateEdit"
            android:layout_below="@id/jobLocationEdit"
            android:layout_alignParentRight="true"/>
        <!--=======================Job Start Date=======================-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/job_start_label"
            android:id="@+id/jobStartLabel"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/currentDateEdit" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/jobStartEdit"
            android:layout_below="@id/currentDateEdit"
            android:layout_alignParentRight="true"/>
        <!--=======================Completion Date===========================-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/job_completion_label"
            android:id="@+id/jobCompletionLabel"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/jobStartEdit" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/jobCompletionEdit"
            android:layout_below="@id/jobStartEdit"
            android:layout_alignParentRight="true"/>
        <!--=======================Job Steward===========================-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/job_steward_label"
            android:id="@+id/jobStewardLabel"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/jobCompletionEdit" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/jobStewardEdit"
            android:layout_below="@id/jobCompletionEdit"
            android:layout_alignParentRight="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Go"
            android:id="@+id/pushBootan"
            android:layout_below="@+id/jobStewardEdit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <!--====================================================-->

    </RelativeLayout>
</ScrollView>
